--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,9 @@
 [[headers]]
   for = "/*"
   [headers.values]
-  Content-Security-Policy = """
-  default-src 'self';
-  connect-src 'self' https://fitlyfy.onrender.com;
-  img-src 'self' https://images.unsplash.com data:;
-  script-src 'self' https://checkout.razorpay.com;
-  frame-src 'self' https://www.youtube.com https://api.razorpay.com;
-  style-src 'self' 'unsafe-inline';
-  font-src 'self' data:;
-  """
+  Content-Security-Policy = "default-src 'self'; connect-src 'self' https://fitlyfy.onrender.com; img-src 'self' https://images.unsplash.com data:; script-src 'self' https://checkout.razorpay.com; frame-src 'self' https://www.youtube.com https://api.razorpay.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:;"
+  Referrer-Policy = "no-referrer"
+  X-Frame-Options = "DENY"
+  X-Content-Type-Options = "nosniff"
+  Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+  X-XSS-Protection = "1; mode=block"
