Update CSP to allow backend images and improve security headers

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-  Content-Security-Policy = "default-src 'self'; connect-src 'self' https://fitlyfy.onrender.com; img-src 'self' https://images.unsplash.com data:; script-src 'self' https://checkout.razorpay.com; frame-src 'self' https://www.youtube.com https://api.razorpay.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:;"
+  Content-Security-Policy = "default-src 'self'; connect-src 'self' https://fitlyfy.onrender.com; img-src 'self' https://images.unsplash.com https://fitlyfy.onrender.com data:; script-src 'self' https://checkout.razorpay.com; frame-src 'self' https://www.youtube.com https://api.razorpay.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:;"
   Referrer-Policy = "no-referrer"
   X-Frame-Options = "DENY"
   X-Content-Type-Options = "nosniff"
